mozilla hex-gaps fixed, some compatibility issues. most of the unified css integrated

--- a/src/ShowCourse.less
+++ b/src/ShowCourse.less
@@ -3,7 +3,7 @@
   src: url(./assets/OpenSans-Light.ttf);
 }
 
-body, text {
+body {
   margin: 0;
   font-family: OpenSans-Light;
   text-rendering: optimizeSpeed;
@@ -11,7 +11,7 @@ body, text {
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
-  min-width: 360px;
+  // min-width: 320px;
   font-feature-settings: "kern", "liga", "clig", "calt";
 }
 
