--- a/src/components/TimePanel.less
+++ b/src/components/TimePanel.less
@@ -127,6 +127,7 @@
 .timepanel {
   display: flex;
   flex-direction: column;
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2);
   // font-size: 12px;
   justify-content: space-around;
   position: fixed;
