--- a/src/containers/SidePanel/SidePanel.less
+++ b/src/containers/SidePanel/SidePanel.less
@@ -45,10 +45,11 @@
   top: 0;
   width: 50px;
   text-align: center;
-  z-index: 9;
+  z-index: 30;
   //background-color: #123f42;
   // background-color: #e9dcc9;
   background-color: #E9DAC5;
+  // box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2);
   // height: 100%;
   height: -ms-viewport-calc(~'100% - 55px');
   height: -webkit-calc(~'100% - 55px');
@@ -112,13 +113,14 @@
   // padding-bottom: 20px;
   // text-align: center;
   width: 450px; // #TODO
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  position: fixed;
+  z-index: 20;
   top: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 0px; /* Place content 20px from the top */
   transition: 0.8s; /* 0.5 second transition effect to slide in the sidenav */
   background-color:rgba(233, 218, 197, 0.73);
+  box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2);
 
   & .feed-panel {
     // overflow-y: auto;
@@ -279,14 +281,16 @@ select {
 
 
 .vertical--logo {
+  font-family: Lora-Regular;
   writing-mode: tb-rl;
   transform: rotate(180deg);
   user-select: none;
   align-self: flex-end;
   margin-top: auto;
-  font-weight: 700px;
+  letter-spacing: 2px;
   line-height: 50px;
-  padding: 10px 0;
+  margin: auto 0 20px;
+  padding: 0;
   @media screen and (max-width:600px) {
     display: none;
   }
